--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>ru.ssau.tk.way1.practice</groupId>
     <artifactId>way1-practice</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.target>1.11</maven.compiler.target>
+        <maven.compiler.source>1.11</maven.compiler.source>
+    </properties>
+    <dependencies>
+    </dependencies>
 
     
 </project>
